# uppli-code

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
benchmark/: run_harness.py  run_harness_one.py  run_single.py
benchmark/docker/: Dockerfile  Dockerfile.builder  property_trace.py
prompts/: AUTO_UPPLI_MD.md  LSP_INTEGRATION_PLAN.md  NEXT_SESSION_PLAN.md  ONBOARDING_FLOW_PLAN.md  OPENCODE_PARITY_TODO.md  SYSTEM_PROMPT_AUDIT.md  SYSTEM_PROMPT_REWRITE.md  TUI_ONBOARDING_AGENT.md  TUI_PROVIDER_BUG.md
scripts/code_audit/: README.md  code_audit.py
scripts/code_audit/analyzers/: ast_analyzer.py  consistency.py  controlflow.py  dataflow.py  predicates.py  semgrep_runner.py  symbols.py
src-rust/: Cargo.toml
src-rust/crates/api/: Cargo.toml
src-rust/crates/api/presets/: alibaba.toml  deepseek.toml  glm.toml  mistral.toml  ollama.toml  openai.toml  openrouter.toml
src-rust/crates/api/src/: lib.rs  openai_provider.rs  provider.rs  provider_factory.rs
src-rust/crates/bridge/src/: lib.rs
src-rust/crates/buddy/src/: lib.rs
src-rust/crates/cli/: Cargo.toml
src-rust/crates/cli/src/: binome.rs  main.rs  mcp_server.rs  oauth_flow.rs  system_prompt.txt
src-rust/crates/commands/: Cargo.toml
src-rust/crates/commands/src/: lib.rs  named_commands.rs
src-rust/crates/mcp/: Cargo.toml
src-rust/crates/rag/: Cargo.toml
src-rust/crates/rag/src/: embed.rs  lib.rs  store.rs
src-rust/crates/tools/: Cargo.toml
src-rust/crates/tui/: Cargo.toml
tests/: MANUAL_TEST_SCENARIO.md
(+124 files in other folders)
